// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar renders correctly with a single children prop 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  color: white;
  background-color: #9f9f9f;
}

.c4 {
  max-width: 1184px;
}

.c8 {
  padding: 8px;
  min-width: 150px;
  height: auto;
}

.c10 {
  margin-left: auto;
  padding: 8px;
  display: block;
}

.c12 {
  margin-left: 0;
  width: 100%;
  max-height: 0vh;
}

.c14 {
  width: 100%;
}

.c15 {
  padding: 8px;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  opacity: 1;
  display: inline-block;
}

.c16:active,
.c16:hover {
  color: hsl(0,0%,80%);
}

.c17 {
  color: white;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

.c5 {
  margin-left: auto;
  margin-right: auto;
  padding-left: 16px;
  padding-right: 16px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c11 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: pointer;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
  -webkit-transition: max-height 0.4s ease-in-out;
  transition: max-height 0.4s ease-in-out;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  overflow: hidden;
}

.c13 a {
  width: 100%;
  display: inline-block;
}

@media screen and (min-width:576px) {
  .c10 {
    margin-left: 0;
  }
}

@media screen and (min-width:576px) {
  .c10 {
    display: none;
  }
}

@media screen and (min-width:576px) {
  .c12 {
    margin-left: auto;
  }
}

@media screen and (min-width:576px) {
  .c12 {
    width: auto;
  }
}

@media screen and (min-width:576px) {
  .c12 {
    max-height: none;
  }
}

@media screen and (min-width:576px) {
  .c14 {
    width: auto;
  }
}

@media screen and (min-width:576px) {
  .c15 {
    width: auto;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3"
  >
    <div
      className="c2 c4 c5"
    >
      <div
        className="c2 c6"
      >
        <div
          className="c2 c7"
        >
          <div
            className="c2 c8 c9"
          />
          <div
            className="c2 c10 c11"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-bars fa-w-14 "
              data-icon="bars"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="c2 c12 c13"
        >
          <div
            className="c2 c14 c6"
          >
            <div
              className="c2 c15"
              onClick={[Function]}
            >
              <a
                className="c16 c17"
                color="white"
                href="/docs/"
              >
                Docs
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar renders correctly with more than one children prop 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  color: white;
  background-color: #9f9f9f;
}

.c4 {
  max-width: 1184px;
}

.c8 {
  padding: 8px;
  min-width: 150px;
  height: auto;
}

.c10 {
  margin-left: auto;
  padding: 8px;
  display: block;
}

.c12 {
  margin-left: 0;
  width: 100%;
  max-height: 0vh;
}

.c14 {
  width: 100%;
}

.c15 {
  padding: 8px;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  opacity: 1;
  display: inline-block;
}

.c16:active,
.c16:hover {
  color: hsl(0,0%,80%);
}

.c17 {
  color: white;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

.c5 {
  margin-left: auto;
  margin-right: auto;
  padding-left: 16px;
  padding-right: 16px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c11 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: pointer;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
  -webkit-transition: max-height 0.4s ease-in-out;
  transition: max-height 0.4s ease-in-out;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  overflow: hidden;
}

.c13 a {
  width: 100%;
  display: inline-block;
}

@media screen and (min-width:576px) {
  .c10 {
    margin-left: 0;
  }
}

@media screen and (min-width:576px) {
  .c10 {
    display: none;
  }
}

@media screen and (min-width:576px) {
  .c12 {
    margin-left: auto;
  }
}

@media screen and (min-width:576px) {
  .c12 {
    width: auto;
  }
}

@media screen and (min-width:576px) {
  .c12 {
    max-height: none;
  }
}

@media screen and (min-width:576px) {
  .c14 {
    width: auto;
  }
}

@media screen and (min-width:576px) {
  .c15 {
    width: auto;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3"
  >
    <div
      className="c2 c4 c5"
    >
      <div
        className="c2 c6"
      >
        <div
          className="c2 c7"
        >
          <div
            className="c2 c8 c9"
          />
          <div
            className="c2 c10 c11"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-bars fa-w-14 "
              data-icon="bars"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="c2 c12 c13"
        >
          <div
            className="c2 c14 c6"
          >
            <div
              className="c2 c15"
              onClick={[Function]}
            >
              <a
                className="c16 c17"
                color="white"
                href="/docs/"
              >
                Docs
              </a>
            </div>
            <div
              className="c2 c15"
              onClick={[Function]}
            >
              <a
                className="c16 c17"
                color="white"
                href="/changelog/"
              >
                changelog
              </a>
            </div>
            <div
              className="c2 c15"
              onClick={[Function]}
            >
              <a
                className="c16 c17"
                color="white"
                href="/gitter/"
              >
                gitter
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar renders correctly with no children prop 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  color: white;
  background-color: #9f9f9f;
}

.c4 {
  max-width: 1184px;
}

.c8 {
  padding: 8px;
  min-width: 150px;
  height: auto;
}

.c10 {
  margin-left: 0;
  width: 100%;
  max-height: 0vh;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

.c5 {
  margin-left: auto;
  margin-right: auto;
  padding-left: 16px;
  padding-right: 16px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
  -webkit-transition: max-height 0.4s ease-in-out;
  transition: max-height 0.4s ease-in-out;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  overflow: hidden;
}

.c11 a {
  width: 100%;
  display: inline-block;
}

@media screen and (min-width:576px) {
  .c10 {
    margin-left: auto;
  }
}

@media screen and (min-width:576px) {
  .c10 {
    width: auto;
  }
}

@media screen and (min-width:576px) {
  .c10 {
    max-height: none;
  }
}

@media screen and (min-width:576px) {
  .c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3"
  >
    <div
      className="c2 c4 c5"
    >
      <div
        className="c2 c6"
      >
        <div
          className="c2 c7"
        >
          <div
            className="c2 c8 c9"
          />
        </div>
        <div
          className="c2 c10 c11"
        />
      </div>
    </div>
  </div>
</div>
`;
